syntax = "proto3";

package protocol;

option go_package = "./joined;joined";

message JoinStoreTPV {
  string year_half_created_at = 1;
  string store_name = 2;
  int64 tpv = 3;
}

message JoinStoreTPVBatch {
  repeated JoinStoreTPV items = 1;
}
